Removed the upload icon in ios. Fixed the info icon event in ios. Fixed the weird backface visibility issues in Safari. Refactored the scroller a bit.
git-tfs-id: [http://tfs:8082/DefaultCollection]$/Griffin/Kendo;C482306

--- a/demos/AeroViewr/Site.css
+++ b/demos/AeroViewr/Site.css
@@ -14,6 +14,11 @@ section
     display:block;
 }
 
+html
+{
+    background-color:#333;
+}
+
 body
 {
     background-color:#333;
@@ -1960,7 +1965,7 @@ html .t-upload
 
 /* touch & scroll styles */
 
-*, :before, :after {
+section *, :before, :after {
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-backface-visibility: hidden;
